2004-04-19 Mauro Tortonesi <mauro@deepspace6.net>

	* Updated i18n subsystem to gettext 0.14.1

2004-01-23 Mauro Tortonesi <mauro@deepspace6.net>

	* Added configuration time detection of Bluez.

2004-01-09 Mauro Tortonesi <mauro@deepspace6.net>

	* Applied Chris's patch that fixes SOMAXCONN backlog parameter for
	  listen(2) in src/network.c, slightly modified.

2004-01-08 Mauro Tortonesi <mauro@deepspace6.net>

	* Added support for Bluez (http://www.bluez.org) on Linux systems.

2003-10-07 Mauro Tortonesi <mauro@deepspace6.net>

	* Fixed a conflict with FreeBSD profiling library by renaming warn()
	  to warning(). Thanks to Filippo Natali for reporting the bug.

2003-06-04 Mauro Tortonesi <mauro@deepspace6.net>

	* Fixed CFLAGS handling problem. Thanks to Filippo Natali for
	  the patch and to the FreeBSD maintainers for reporting the bug.

2003-05-11 Mauro Tortonesi <mauro@deepspace6.net>

	* Released nc6 0.5

2003-03-26 Chris Leishman <chris@leishman.org>

	* Added --exec option for setting a command to be executed after connect.
	* Added --continous option for continuously accepting connections.

2003-03-16 Chris Leishman <chris@leishman.org>

	* Fixed bug in --half-close mode where the remote transmit stream wasn't
	   actually being half-closed.

2003-01-25 Mauro Tortonesi <mauro@deepspace6.net>

	* Added many more assertions in the code.
	* Cleaned code of the verbose_mode and very_verbose_mode functions.
	* Released netcat 0.4. 

2003-01-24 Chris Leishman <chris@leishman.org>

	* Restructured io_stream, especially with respect to timeout handling.
	* Added --idle-timeout option for setting the idle timeout on the remote
	  stream.

2003-01-23 Chris Leishman <chris@leishman.org>

	* Fixed bug with --no-reuseaddr option not being recognized.
	* Fixed bug in readwrite that could result in non-termination.
	* Added --sndbuf-size and --rcvbuf-size options for setting SO_RCVBUF and
	  SO_SNDBUF respectively.

2003-01-21 Mauro Tortonesi <mauro@deepspace6.net>
